changing pic extention

--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@ console.log(`%c
                     <div class="col-xs-12 col-sm-6">
                       <div class="certificate-item clearfix">
                         <div class="certi-logo">
-                          <img src="img/clients/fortinet1.png" alt="logo">
+                          <img src="img/clients/fortinet1.jpg" alt="logo">
                         </div>
                         
                         <div class="certi-content">
@@ -847,7 +847,7 @@ console.log(`%c
                     <div class="col-xs-12 col-sm-6">
                       <div class="certificate-item clearfix">
                         <div class="certi-logo">
-                          <img src="img/clients/fortinet2.png" alt="logo">
+                          <img src="img/clients/fortinet2.jpg" alt="logo">
                         </div>
                         
                         <div class="certi-content">
