Fixing contact form error and cleaning the index web page

--- a/contacts.html
+++ b/contacts.html
@@ -109,7 +109,7 @@
 						<div class="title_inner">Contact Form</div>
 					</div>
 					<div class="contact_form">
-						<form id="cform" method="post">
+						<form action="https://formspree.io/f/xnndqpzy" method="POST">
 							<div class="group-val">
 								<input type="text" name="name" placeholder="Name" required />
 							</div>
