add iso27001 cer

--- a/resume.html
+++ b/resume.html
@@ -157,7 +157,7 @@
 								<li><strong>Field:</strong> Cybersecurity</li>
 								<li><strong>Email:</strong> ouguahii@gmail.com</li>
 								<li><strong>Phone:</strong> +212613383197</li>
-								<li><strong>Certifications:</strong> CRTA, NSE 1 & 2</li>
+								<li><strong>Certifications:</strong> CRTA 2025, ISO/IEC 27001 2025, NSE 1 & 2</li>
 								<li><strong>Current Focus:</strong> PFE M2 - Pentesting a private website, creating detailed reports with solutions, and pursuing CBBH Certificate by HTB</li>
 							</ul>
 						</div>
@@ -304,12 +304,21 @@
 					</div>
 					<div class="resume-items">
 						<div class="resume-item">
-							<div class="date">2024</div>
+							<div class="date">2025</div>
 							<div class="name">Certified Red Team Analyst (CRTA)</div>
 							<p>
-								Credential ID: 7f8b7a3b-c015-48b8-a5fd-4e2c52f6be5f
-								Professional certification in Red Team Operations and Advanced Penetration Testing.
-								Comprehensive training in offensive security methodologies and techniques.
+								Credential ID: 7f8b7a3b-c015-48b8-a5fd-4e2c52f6be5f<br/>
+								Professional certification in Red Team Operations and Advanced Penetration Testing.<br/>
+								Verification Link: <a href="https://www.credential.net/7f8b7a3b-c015-48b8-a5fd-4e2c52f6be5f#acc.8x91kJoY" target="_blank" rel="noopener noreferrer">https://www.credential.net/7f8b7a3b-c015-48b8-a5fd-4e2c52f6be5f#acc.8x91kJoY</a>
+							</p>
+						</div>
+						<div class="resume-item">
+							<div class="date">2025</div>
+							<div class="name">ISO/IEC 27001 Information Security Associate</div>
+							<p>
+								Credential ID: 67480586409460<br/>
+								Skills learned: Information security management, risk assessment, compliance, and implementation of ISO/IEC 27001 standards.<br/>
+								Verification Link: <a href="https://www.skillfront.com/Badges/67480586409460" target="_blank" rel="noopener noreferrer">https://www.skillfront.com/Badges/67480586409460</a>
 							</p>
 						</div>
 						<div class="resume-item">
@@ -467,6 +476,8 @@
 			</div>
 
 			<!-- Skills -->
+
+			<!-- Skills -->
 			<div class="section skills">
 				<div class="content">
 					<div class="title">
@@ -476,7 +487,7 @@
 						<ul>
 							<li> 
 								<div class="name">Python</div>
-								<div class="progress p60">
+								<div class="progress p40">
 									<div class="percentage" style="width: 60%;">
 										<span class="percent">60%</span>
 									</div>
@@ -528,27 +539,6 @@
 									<span>55%</span>
 								</div>
 							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-
-			<!-- Knowledge -->
-			<div class="section skills">
-				<div class="content">
-					<div class="title">
-						<div class="title_inner">Areas of Expertise</div>
-					</div>
-					<div class="skills list">
-						<ul>
-							<li><div class="name">Vulnerability Assessment & Exploitation</div></li>
-							<li><div class="name">Bug Bounty Hunting</div></li>
-							<li><div class="name">CTF Competitions</div></li>
-							<li><div class="name">Network Security Analysis</div></li>
-							<li><div class="name">Web Application Security</div></li>
-							<li><div class="name">Security Research</div></li>
-							<li><div class="name">Exploit Development</div></li>
-							<li><div class="name">Red Team Operations</div></li>
 						</ul>
 					</div>
 				</div>
