--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 						<div class="info-line"><span class="info-label">Field:</span> Cybersecurity</div>
 						<div class="info-line"><span class="info-label">Email:</span> ouguahii@gmail.com</div>
 						<div class="info-line"><span class="info-label">Phone:</span> +212613383197</div>
-						<div class="info-line"><span class="info-label">Certifications:</span> Certified Red Team Analyst (CRTA) 2025, ISO/IEC 27001 Information Security Associate 2025, Fortinet NSE 1 & 2 (2020)</div>
+						<div class="info-line"><span class="info-label">Certifications:</span> HTB Certified Web Exploitation Specialist (HTB CWES), Certified Red Team Analyst (CRTA) 2025, ISO/IEC 27001 Information Security Associate 2025, Fortinet NSE 1 & 2 (2020)</div>
 						<div class="info-line"><span class="info-label">Education:</span> Master's in Communication Systems, Data Center and Cyber Security (SUPEMIR 2024-2025), Professional License in Cyber Security (FST Settat 2019-2020)</div>
 						<div class="info-line"><span class="info-label">Platforms:</span> HackTheBox, TryHackMe, CTF Competitions (3rd Place National CTF 2019)</div>
 						<div class="info-line"><span class="info-label">Languages:</span> Arabic (Native), English (85%), French (85%), Tamazight (50%)</div>
